--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
   <body class="<%= yield (:body_class) %>">
     <%= setting["html.per_page_code_body"].try(:html_safe) %>
 
+    <%= render "layouts/demo_info" %>
+
     <h1 class="show-for-sr"><%= setting["org_name"] %></h1>
 
     <div class="wrapper <%= yield (:wrapper_class) %>">
