--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -7,6 +7,7 @@
   </head>
 
   <body class="auth-page">
+    <%= render "layouts/demo_info" %>
     <%= setting["html.per_page_code_body"].try(:html_safe) %>
     <div class="wrapper">
       <div class="auth-image small-12 medium-3 column">
