--- a/app/views/polls/show.html.erb
+++ b/app/views/polls/show.html.erb
@@ -63,6 +63,8 @@
             <h3><%= answer.title %></h3>
           <% end %>
 
+          <%= render "demo_gallery", answer: answer %>
+
           <% if answer.images.any? %>
             <%= render "gallery", answer: answer %>
           <% end %>
