--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1072,16 +1072,17 @@ form {
     margin: $line-height / 2 0 $line-height / 2 $line-height / 4;
   }
 
-  .cke {
-    margin-bottom: $line-height;
+  .cke_textarea_inline {
+    @include form-element;
+    height: auto;
   }
 
+  .cke_textarea_inline,
   .html-area {
-    height: 272px;
-    margin-bottom: $line-height;
+    min-height: $line-height * 13;
 
     &.admin {
-      height: 572px;
+      min-height: $line-height * 30;
     }
   }
 
